--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../assets/CSS/style.css">
 </head>
 <body>
 
+    <div class="title">
     <h1>Welcome Elomi Gire</h1>
-    
+    <button type="button" onclick="buttonDetail()">Detail</button>
+    </div>
+
+    <div>
+        <div class="detail">
+            <p id="detail"></p>
+        </div>
+    </div>
+ <script src="../assets/js/script.js"></script>
 </body>
 </html>
