--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
     <title>Home</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../assets/CSS/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
+    
     <div class="title">
-    <h1>Welcome Elomi Gire</h1>
-    <button type="button" onclick="buttonDetail()">Detail</button>
+        <h1>Welcome Elomi Gire</h1>
+        <button type="button" onclick="buttonDetail()" >Detail</button>
+    </div>
+    <div class="detail">
+        <p id="detail"></p>
     </div>
 
-    <div>
-        <div class="detail">
-            <p id="detail"></p>
-        </div>
-    </div>
- <script src="../assets/js/script.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
